2008-03-29  GESTES Cedric <ctaf42@gmail.com>
	* ct-git : poor warper around git and git svn

2008-03-22  GESTES Cedric  <ctaf42@gmail.com>
	* emacs : freaking support for gdb: just try f8
	* emacs ([f3]): igrep/igrep-find
	* emacs (f11) : toggle gdb windows on/off
	* emacs (c-f1) : describe function under cursor
	* emacs : semantic working completion \o/

2008-03-20  Cedric GESTES  <gestes@aldebaran-robotics.com>
	* emacs : support bitbake

2008-03-16  Cedric GESTES  <ctaf42@gmail.com>
	* ct-installconf : add folder perso/emacs-backup for emacs
	* emacs : store backup in perso/emacs-backup


2008-03-15  Cedric GESTES <ctaf42@gmail.com>
	* emacs: beginning support for gtk-ctafconf (menubar/scrollbar/toolbar)

2008-03-11  Cedric GESTES  <gestes@aldebaran-robotics.com>
	* emacs: added cmake-mode

2008-03-04  Cedric GESTES  <gestes@aldebaran-robotics.com>
	* emacs: automatic compilation window scroll
	* env: added PATH for /sbin

2008-03-01  Cedric GESTES  <ctaf42@gmail.com>
	* emacs: dont call emacs debugger on error (avoid annoying popup)
	* emacs: added auto perl-mode for file with name matching .pl
	* emacs: F8, compilation mode is faster, and window bigger

2008-02-26 CTAF <>
	* bash/zsh : support white on black and black on white !!!!
	* zsh: remove a space in the prompt

2008-02-25 CTAF  <ctaf42@gmail.com> -- 1.0.46
	* etc/grk/gnome.grk: removed shortkey for metacity
	* emacs: perl template begin with #!/usr/bin/env perl
	* colorsvn/colorcvs

2008-02-13 CTAF <>
	* new ct-newuser : configure the ctafconf for a new user from the system install
	* new ct-autostart : startup file, launched at X startup

2008-02-11 CTAF <>
	* emacs : better indentation

2008-02-11 CTAF <> -- 1.0.45
	* replacer : safer
	* colorsvn : header (filename) are yellow (used by replacer)

2008-02-10 CTAF <>
	* ct-profile : remove ctafconf_config, for epita use ct-env
	* alias : a = autoreconf -isvf
	* zsh : completion for m, ma, mac, make_real, c
	* ct-installconf : dont ask anything