@@ -1,4 +1,4 @@
-#!/bin/sh
+#!/bin/bash
 ##
 ## ct-updateconf
 ## Login : <ctaf@ctaf-laptop>
